--- a/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              xmlns:data="clr-namespace:MaintenanceDashboard.Data.Domain;assembly=MaintenanceDashboard.Data"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewlModel}"
+             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}"
              Height="auto" Width="auto">
 
     <Grid Margin="25">
@@ -52,9 +52,9 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                
 
-                <ListBox ItemsSource="{Binding RegisterTools}" DockPanel.Dock="Bottom" Grid.Column="1" Grid.Row="1" Margin="10">
+
+                <ListBox ItemsSource="{Binding RegisterTools}" SelectedItem="{Binding SelectedRegisterTool}" Grid.Column="1" Grid.Row="1">
                     <ListBox.Resources>
                         <DataTemplate DataType="{x:Type data:RegisterTool}">
                             <TextBlock>
@@ -62,11 +62,11 @@
                         <Run Text="{Binding ToolName}"/>
                         <Run FontWeight="Bold">UidCode:</Run>
                         <Run Text="{Binding UidCode}"/>
-
                             </TextBlock>
                         </DataTemplate>
                     </ListBox.Resources>
                 </ListBox>
+                
 
                 <TextBlock Text="REJESTROWANE WYPOSAŻENIE" HorizontalAlignment="Center" VerticalAlignment="Center"  
                            FontSize="18" Grid.Column="0" Grid.Row="0" Foreground="Gray" Grid.ColumnSpan="2" Margin="10"/>
@@ -74,14 +74,22 @@
                 <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
                     <TextBox x:Name="txtID" Width="400" IsReadOnly="True" materialDesign:HintAssist.Hint="Id" 
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                             Text="{Binding SelectedRegisterTool.Id, 
+                             UpdateSourceTrigger=PropertyChanged, 
+                             ValidatesOnDataErrors=True}"
+                             Margin="10"/>
                     <TextBox  Width="400" materialDesign:HintAssist.Hint="Nazwa wyposażenia" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                             Text="{Binding ToolName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                             Text="{Binding SelectedRegisterTool.ToolName, 
+                             UpdateSourceTrigger=PropertyChanged, 
+                             ValidatesOnDataErrors=True}" Margin="10"/>
                     <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" 
                               materialDesign:HintAssist.HelperText="" IsReadOnly="True" 
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
-                              Text="{Binding UidCode, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                              Text="{Binding UidCode, 
+                              UpdateSourceTrigger=PropertyChanged, 
+                              ValidatesOnDataErrors=True}" />
 
                 </StackPanel>
 
@@ -90,13 +98,19 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
+                        <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     
 
                     <Button  Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
-                             Content="EDYTUJ"  Margin="10" Grid.Column="0" />
+                             Content="EDYTUJ"  Margin="10" Grid.Column="0" 
+                             Command="{Binding SaveRegisterToolCommand}"/>
                     <Button   Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
-                              Content="USUŃ"  Margin="10" Grid.Column="2"/>
+                              Content="USUŃ"  Margin="10" Grid.Column="1"
+                              Command="{Binding DeleteRegisterToolCommand}"/>
+                    <Button   Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
+                              Content="ODŚWIEŻ"  Margin="10" Grid.Column="2"
+                              Command="{Binding GetRegisterToolListCommand}"/>
                 
                 </Grid>
             </Grid>
